<resources>
    <string name="app_name">Suraksha</string>
    <string name="title">Suraksha</string>
    <string name="reg_btn">Register Details</string>
    <string name="btn">Instruction</string>
    <string name="view_btn">View Details</string>
    <string name="help">Please follow the below steps to setup your account:\n\n\n\t1. Register Your Phone Number.\n\t2. Register Your Guardian Numbers.\n\t3. Always maintain working internet connection.\n\t4. Keep the application running in backgroud whenever you are travelling alone.\n\t5. SHAKE your phone in case of emergency to alert your guardians.\n\t\n\n\n\n\tLETS START NOW!</string>
    <string name="back_btn">Back</string>
    <string name="num1">Enter required Mobile Numbers</string>
    <string name="your_number">Your Number (Mandatory)</string>
    <string name="gnum1">Guardian 1 (Mandatory)</string>
    <string name="gnum2">Guardian 2 (Optional)</string>
    <string name="gnum3">Guardian 3 (Optional)</string>
    <string name="save">Save</string>

</resources>
